--- a/app/src/main/res/layout/wallet_purchase_card_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_card_preview.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/rectangular_green_frame">
+                android:layout_marginBottom="10dp">
                 <TextView
                     android:id="@+id/text_view_purchase_preview_error"
                     android:layout_width="match_parent"
@@ -37,208 +37,227 @@
                     android:gravity="center_horizontal" />
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="5dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Status "
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_status"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Successful"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Reference ID "
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_reference_number"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="123456789025"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Receipt ID "
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_receipt_number"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="001230"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Service"
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_service"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Food Purchase"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Paid To "
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:textAppearance="@style/textAppearance_general"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_preview_name"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Kalin Farms"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Transaction Amount"
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:textAppearance="@style/textAppearance_general"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/txt_view_bill_preview_total"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="UGX 0"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_height="50dp"
-                    android:layout_width="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="15dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Purchase Date"
-                        android:textColor="#707070"
-                        android:textSize="14sp"
-                        android:background="@drawable/rectangular_green_frame"/>
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:text=":"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"  />
                     <TextView
                         android:id="@+id/text_view_purchase_date_time"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="2019/01/01  23:00pm"
                         android:alpha="1.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/rectangular_green_frame"
-                        />
+                        android:textSize="18sp"
+                        android:textColor="@color/colorPrimary" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -249,7 +268,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
