--- a/app/src/main/res/layout/wallet_loanstatus_preview.xml
+++ b/app/src/main/res/layout/wallet_loanstatus_preview.xml
@@ -30,7 +30,7 @@
         <LinearLayout
             android:id="@+id/text_view_loan_status_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_margin="10dp"
             android:background="@color/white"
             android:orientation="vertical"
@@ -449,7 +449,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
